# tut_ibx0020

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
intellibrainbot/: ROSinterface.java  ROSinterface.rjp
launch/: control.launch
scripts/: .project  .pydevproject  control.py  intellibrainbot.py  laser2sonarirlaser.py  swarm.py  teleop_key.py
src/: control.cpp  swarm.cpp
worlds/: pool.urdf  pool.xml  robot.urdf  test.pgm  test.world  test2.world  willow-erratic.world
