<?xml version="1.0"?>
<package>
  <name>tut_ibx0020</name>
  <version>0.0.1</version>
  <description>The package for Robotics Course at Tallinn University of Technology</description>

  <maintainer email="juri.gavsin@ttu.ee">Yuri Gavshin</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://ros.org/wiki/tut_ibx0020</url> -->

<author email="juri.gavsin@ttu.ee">Yuri Gavshin</author>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-serial</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-serial</run_depend>

</package>
